Closed Bug 378129 Opened 17 years ago Closed 17 years ago

Consistently pass the right frame to InvalidateInternal

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: sharparrow1, Assigned: sharparrow1)

Details

Attachments

(1 file)

nsBlockFrame::InvalidateInternal and nsListControlFrame::InvalidateInternal pass their input aForChild to their parent.  This is wrong; they should be passing this.

(Fixing this could be a perf improvement because currently this screws up the check in nsGfxScrollFrameInner::InvalidateInternal.)

Patch coming up.
Attached patch PatchSplinter Review
Pretty straightforward, unless I'm misinterpreting the doc comments for InvalidateInternal.

All the other implementations of InvalidateInternal get this right.
Attachment #262212 - Flags: review?(roc)
Comment on attachment 262212 [details] [diff] [review]
Patch

good catch
Attachment #262212 - Flags: superreview+
Attachment #262212 - Flags: review?(roc)
Attachment #262212 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
No correctness issues here; the only place that depends on the passed-in frame uses it for a perf optimization.
Flags: in-testsuite? → in-testsuite-
Product: Core → Core Graveyard
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: