Bug 378129: Consistently pass the right frame to InvalidateInternal. r+sr=roc.