layout/forms/nsListControlFrame.cpp
@@ -1839,7 +1839,7 @@ nsListControlFrame::InvalidateInternal(const nsRect& aDamageRect,
                                        PRBool aImmediate)
 {
   if (!IsInDropDownMode())
-    nsHTMLScrollFrame::InvalidateInternal(aDamageRect, aX, aY, aForChild, aImmediate);
+    nsHTMLScrollFrame::InvalidateInternal(aDamageRect, aX, aY, this, aImmediate);
   InvalidateRoot(aDamageRect, aX, aY, aImmediate);
 }
 
